--- a/.github/workflows/rustdoc.yml
+++ b/.github/workflows/rustdoc.yml
@@ -19,7 +19,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Install MPI
-      run: sudo apt install mpich
+      run: |
+          sudo apt update
+          sudo apt install -y mpich
 
     - name: Install Rust toolchain
       uses: actions-rs/toolchain@v1
